--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1233,7 +1233,7 @@ saveBtn2.addEventListener("click", (e) => {
     }
     // c
     
-    const socket = io.connect('http://localhost:5000');
+    const socket = io.connect('https://db32-105-235-128-197.ngrok-free.app/');
 
   socket.on('connect', () => {
     console.log('Socket.IO connection opened');
