--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -2216,7 +2216,7 @@ document.addEventListener('selectionchange', () => {
 const CONTROLLER_NAME = 'zack';
 
 // Connect to the server with the user's name as a query parameter
-const socket = io.connect('https://zakhoudache-videoknowle-a19yckybohp.ws-eu97.gitpod.io', { query: { name: CONTROLLER_NAME } });
+const socket = io.connect('https://5000-zakhoudache-videoknowle-a19yckybohp.ws-eu97.gitpod.io/', { query: { name: CONTROLLER_NAME } });
 socket.on('connect', () => {
   console.log('Connected to server:', socket.id);
 });
@@ -2523,7 +2523,7 @@ select.addEventListener('change', (event) => {
         height: '360',
         width: '640',
         videoId: videoId,
-        origin: "https://zakhoudache-videoknowle-a19yckybohp.ws-eu97.gitpod.io/",
+        origin: "https://5000-zakhoudache-videoknowle-a19yckybohp.ws-eu97.gitpod.io/",
         events: {
           'onReady': onPlayerReady,
           // 'onStateChange': onPlayerStateChange
