--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3281,6 +3281,33 @@ button:nth-child(13){
  transform:translatex(64px) translatey(-1852px);
 }
 
+.floating-textarea {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid #ccc;
+  padding: 10px;
+  overflow-y: auto;
+}
+/* Chat area */
+#chatArea{
+ transform:translatex(0px) translatey(-580px);
+ margin-left:0px;
+ width:174px !important;
+ padding-bottom:5px;
+}
+
+#chatArea {
+  height: 400px; /* Adjust the height to your desired value */
+  overflow-y: auto;
+  line-height: 16px;
+  word-wrap: break-word;
+    word-break: break-word;
+}
+
 
   </style>
 </head>
